@startuml

title __GOOGLE's Class Diagram__\n

  namespace com.itbird.design {
    namespace principle {
      namespace mvp.google {
        interface com.itbird.design.principle.mvp.google.BasePresenter {
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace mvp.google {
        interface com.itbird.design.principle.mvp.google.BaseView {
            {abstract} + setPresenter()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace mvp.google {
        interface com.itbird.design.principle.mvp.google.TaskDetailContract {
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace mvp.google {
        interface com.itbird.design.principle.mvp.google.TaskDetailContract.Presenter {
            {abstract} + loadDataFromModel()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace mvp.google {
        interface com.itbird.design.principle.mvp.google.TaskDetailContract.View {
            {abstract} + updateTextView()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace mvp.google {
        class com.itbird.design.principle.mvp.google.TaskGoogleActivity {
            {static} - TAG : String
            - mTextView : TextView
            + setPresenter()
            + updateTextView()
            # onCreate()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace mvp.google {
        class com.itbird.design.principle.mvp.google.TaskGooglePresenter {
            {static} - TAG : String
            + TaskGooglePresenter()
            + loadDataFromModel()
        }
      }
    }
  }
  

  com.itbird.design.principle.mvp.google.TaskDetailContract +-down- com.itbird.design.principle.mvp.google.TaskDetailContract.Presenter
  com.itbird.design.principle.mvp.google.TaskDetailContract +-down- com.itbird.design.principle.mvp.google.TaskDetailContract.View
  com.itbird.design.principle.mvp.google.TaskGoogleActivity .up.|> com.itbird.design.principle.mvp.google.TaskDetailContract.View
  com.itbird.design.principle.mvp.google.TaskGoogleActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.itbird.design.principle.mvp.google.TaskGoogleActivity o-- com.itbird.design.principle.mvp.google.TaskDetailContract.Presenter : mPresenter
  com.itbird.design.principle.mvp.google.TaskGooglePresenter .up.|> com.itbird.design.principle.mvp.google.TaskDetailContract.Presenter
  com.itbird.design.principle.mvp.google.TaskGooglePresenter o-- com.itbird.design.principle.mvp.google.TaskDetailContract.View : mView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
